apps/base/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich 
  labels:
    local-access: "true"
