apps/base/immich/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
  - name: traefik-gateway 
    namespace: ingress-traefik
  hostnames:
  - "immich.flux.techbabette.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server 
      port: 2283
